--- a/src/burp/gather/MyForm.form
+++ b/src/burp/gather/MyForm.form
@@ -79,7 +79,7 @@
                   <component id="daca0" class="javax.swing.JLabel" binding="noticeField">
                     <constraints border-constraint="Center"/>
                     <properties>
-                      <horizontalAlignment value="0"/>
+                      <horizontalAlignment value="2"/>
                       <text value="Click start to discover subdomains."/>
                     </properties>
                   </component>
@@ -136,7 +136,7 @@
             <border type="none"/>
             <children/>
           </grid>
-          <grid id="f5516" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="f5516" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Options"/>
@@ -152,63 +152,26 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="5a03c" class="javax.swing.JLabel" binding="wydomainPathLabel">
+                  <component id="5a03c" class="javax.swing.JLabel" binding="teemoPathLabel">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="wydomain path: "/>
+                      <text value="Teemo path: "/>
                     </properties>
                   </component>
-                  <component id="79f65" class="javax.swing.JTextField" binding="wydomainPathTextField">
+                  <component id="79f65" class="javax.swing.JTextField" binding="teemoPathTextField">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
-                      <text value=""/>
+                      <text value="X:\Tools\ctf\Web\CollectInformation\SubDomain\Teemo\teemo.py"/>
                       <toolTipText value="please select this"/>
                     </properties>
                   </component>
-                  <component id="3dfc7" class="javax.swing.JButton" binding="wydomainPathButton">
-                    <constraints>
-                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text value="Browse"/>
-                    </properties>
-                  </component>
-                </children>
-              </grid>
-              <grid id="1a4b1" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties/>
-                <border type="none"/>
-                <children>
-                  <component id="c6dec" class="javax.swing.JLabel" binding="wyDicPath">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text value="subdomain dic path: "/>
-                    </properties>
-                  </component>
-                  <component id="220a0" class="javax.swing.JTextField" binding="wyDicPathTextField">
-                    <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="-1"/>
-                      </grid>
-                    </constraints>
-                    <properties>
-                      <text value=""/>
-                      <toolTipText value="please select this"/>
-                    </properties>
-                  </component>
-                  <component id="2825b" class="javax.swing.JButton" binding="wyDicPathButton">
+                  <component id="3dfc7" class="javax.swing.JButton" binding="teemoPathButton">
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -221,7 +184,7 @@
               <grid id="57ab1" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -255,7 +218,7 @@
               <grid id="6b1fd" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
