--- a/src/burp/gather/MyForm.form
+++ b/src/burp/gather/MyForm.form
@@ -102,7 +102,7 @@
               </grid>
             </children>
           </grid>
-          <grid id="da10c" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="da10c" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Ports"/>
@@ -110,16 +110,47 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="a7691" class="javax.swing.JTextField" binding="portsTextField" default-binding="true">
+              <vspacer id="8d38e">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </vspacer>
+              <component id="7ed42" class="javax.swing.JTree" binding="portScanJTree">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="50"/>
                   </grid>
                 </constraints>
-                <properties>
-                  <text value="ports"/>
-                </properties>
+                <properties/>
               </component>
+              <grid id="3fecf" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="41966" class="javax.swing.JLabel">
+                    <constraints/>
+                    <properties>
+                      <text value="IP Address: "/>
+                    </properties>
+                  </component>
+                  <component id="a7691" class="javax.swing.JTextField" binding="ipTextField">
+                    <constraints/>
+                    <properties>
+                      <columns value="20"/>
+                      <text value="127.0.0.1"/>
+                    </properties>
+                  </component>
+                  <component id="d48a2" class="javax.swing.JButton" binding="addButton" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <text value="Add"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
             </children>
           </grid>
           <grid id="40c6f" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
