--- a/src/burp/gather/MyForm.form
+++ b/src/burp/gather/MyForm.form
@@ -48,7 +48,7 @@
                   <component id="d7ef5" class="javax.swing.JButton" binding="startButton" default-binding="true">
                     <constraints/>
                     <properties>
-                      <text value="Start"/>
+                      <text value="Add"/>
                     </properties>
                   </component>
                   <component id="c6b6f" class="javax.swing.JButton" binding="importButton" default-binding="true">
@@ -102,7 +102,7 @@
               </grid>
             </children>
           </grid>
-          <grid id="da10c" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="da10c" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Ports"/>
@@ -115,14 +115,6 @@
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
-              <component id="7ed42" class="javax.swing.JTree" binding="portScanJTree">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="50"/>
-                  </grid>
-                </constraints>
-                <properties/>
-              </component>
               <grid id="3fecf" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -151,26 +143,19 @@
                   </component>
                 </children>
               </grid>
-            </children>
-          </grid>
-          <grid id="40c6f" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
-            <constraints>
-              <tabbedpane title="Dirs"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="f4b16" class="javax.swing.JPasswordField" binding="passwordPasswordField" default-binding="true">
+              <scrollpane id="9e588">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties>
-                  <text value="password"/>
-                </properties>
-              </component>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="7ed42" class="javax.swing.JTree" binding="portScanJTree">
+                    <constraints/>
+                    <properties/>
+                  </component>
+                </children>
+              </scrollpane>
             </children>
           </grid>
           <grid id="e907c" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
